tests/requests/snapshots/can_get_user@users_request.snap
---
source: tests/requests/users.rs
expression: "(users.status_code(), users.text())"
---
(
    200,
    "{\"id\":ID,\"name\":\"user1\",\"email\":\"user1@example.com\"}",
)
