tests/requests/snapshots/can_get_users@users_request.snap
---
source: tests/requests/users.rs
expression: "(users.status_code(), users.text())"
---
(
    200,
    "[{\"id\":ID,\"name\":\"user1\",\"email\":\"user1@example.com\"},{\"id\":ID,\"name\":\"user2\",\"email\":\"user2@example.com\"}]",
)
